--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
+#dossen.cgi.client.cgiVersion=2.0
+#dossen.cgi.client.cgiScheme=HTTP://
+#dossen.cgi.client.cgiHost=http://211.91.0.118
+#dossen.cgi.client.oneIdAppId=173946580829868033
+#dossen.cgi.client.oneIdAppSecret=42d6741445afba6140a8d4051edc938f
+
+
+
+#网关配置——OneID平台分配的appID
+dossen.cgi.client.oneIdAppId=189155456522301441
+#网关配置——OneID平台分配的应用密钥
+dossen.cgi.client.oneIdAppSecret=e283ad86afb758c1fbca226623c6b31a
+#网关配置——网关版本
 dossen.cgi.client.cgiVersion=2.0
+#网关配置——网关请求协议
 dossen.cgi.client.cgiScheme=HTTP://
-dossen.cgi.client.cgiHost=http://211.91.0.118
-dossen.cgi.client.oneIdAppId=173946580829868033
-dossen.cgi.client.oneIdAppSecret=42d6741445afba6140a8d4051edc938f
+#网关配置——网关HOST
+dossen.cgi.client.cgiHost=cgi.ali.dossen.com
