--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=30001
+
 #dossen.cgi.client.cgiVersion=2.0
 #dossen.cgi.client.cgiScheme=HTTP://
 #dossen.cgi.client.cgiHost=http://211.91.0.118
