--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@
 
 
 #网关配置——OneID平台分配的appID
-dossen.cgi.client.appkey=189155456522301441
+dossen.oneid.appid=189155456522301441
 #网关配置——OneID平台分配的应用密钥
-dossen.cgi.client.appsecret=e283ad86afb758c1fbca226623c6b31a
+dossen.oneid.appsecret=e283ad86afb758c1fbca226623c6b31a
 #网关配置——网关版本
-dossen.cgi.client.version=2.0
+dossen.oneid.cgi.version=2.0
 #网关配置——网关请求协议
 dossen.cgi.client.scheme=HTTP://
 #网关配置——网关HOST
 dossen.cgi.client.host=cgi.ali.dossen.com
+
