--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ dossen.oneid.cgi.version=2.0
 #网关配置——网关请求协议
 dossen.cgi.client.scheme=HTTP://
 #网关配置——网关HOST
-dossen.cgi.client.host=cgi.ali.dossen.com
+dossen.cgi.client.host=cgi.ali.dossen.com:80
 
