--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,12 @@
 server.port=30001
 
-#dossen.cgi.client.cgiVersion=2.0
-#dossen.cgi.client.cgiScheme=HTTP://
-#dossen.cgi.client.cgiHost=http://211.91.0.118
-#dossen.cgi.client.oneIdAppId=173946580829868033
-#dossen.cgi.client.oneIdAppSecret=42d6741445afba6140a8d4051edc938f
-
-
-
 #网关配置——OneID平台分配的appID
-dossen.cgi.client.oneIdAppId=189155456522301441
+dossen.cgi.client.appId=224357176743211009
 #网关配置——OneID平台分配的应用密钥
-dossen.cgi.client.oneIdAppSecret=e283ad86cvb759c1fbca226623c6b31a
+dossen.cgi.client.secret=257e189b13c6386b263358c80d2417c2
 #网关配置——网关版本
-dossen.cgi.client.cgiVersion=2.0
+dossen.cgi.client.version=2.0
 #网关配置——网关请求协议
-dossen.cgi.client.cgiScheme=HTTP://
+dossen.cgi.client.scheme=HTTP://
 #网关配置——网关HOST
-dossen.cgi.client.cgiHost=cgi.ali.dossen.com
+dossen.cgi.client.host=cgi.ali.dossen.com
